# fastmcp-builder

./: .gitignore  README.md
.claude-plugin/: marketplace.json
examples/: complete_server_structure.py  minimal_server.py  test_examples.py
reference/: fastmcp_overview.md  oauth_integration.md  project_structure.md  resource_patterns.md  testing_guide.md  tool_patterns.md
reference-project/: .env.example  .gitignore  README.md  mcp-config.json  pyproject.toml
reference-project/app/: __init__.py  common.py  config.py  main.py  main_noauth.py
reference-project/app/prompts/: __init__.py  explain.py
reference-project/app/resources/: __init__.py  docs.py  static.py  userinfo.py  welcome.py
reference-project/app/tools/: analyze_text.py  counter.py  get_forecast.py  ping.py  process_text.py  request_info.py
reference-project/tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_integration.py  test_prompts.py  test_resources.py  test_tools.py
